# log-agent-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/routes/: analysis.py  eval.py  servers.py  slack_events.py  webhook.py
app/core/: config.py  database.py
app/evaluation/: rag_eval.py
app/middleware/: logging.py
app/models/: server.py
app/schemas/: analysis.py  server.py
app/services/: git_service.py  github_service.py  judge_service.py  ollama_service.py  rag_service.py  security_service.py  slack_service.py  ssh_service.py
tests/: test_health.py
